Fix: z-index of img-card of hero-home

--- a/src/index.css
+++ b/src/index.css
@@ -174,7 +174,7 @@ h6 {
   position: absolute;
   left: 128px;
   top: 180px;
-  z-index: 22;
+  z-index: 2;
 }
 
 @media (max-width: 1100px) {
